--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <template>
   <require from="bootstrap/css/bootstrap.css"></require>
   <require from="./style.css"></require>
-  <require from="./spot-list"></require>
+  <!--<require from="./spot-list"></require>-->
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
@@ -14,6 +14,7 @@
 
   <div class="container">
       <!--      <spot-list class="col-md-4"></spot-list>-->
-      <router-view class="col-md-8"></router-view>
+      <!--<router-view class="col-md-8"></router-view>-->
+      <router-view></router-view>
   </div>
 </template>
